# KawaiiVault

./: .gitignore  ABOUT.md  LICENSE  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  fresh-clone.bat  index.html  package-lock.json  package.json  tauri-dev.bat  update.bat  update.md  vite.config.ts
.github/workflows/: sync-to-new.yml
docs/: QUALITY_AUDIT.md  RAINBOW_THEME_SPEC.md  YELLOW_THEME_SPEC.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: browser.json  default.json
src-tauri/src/: hls.rs  lib.rs  phone_server.rs  vault.rs
src/components/: AuditLogPanel.tsx  CyberButton.tsx  DecoySnakeGame.tsx  DiagBot.tsx  DiagReport.tsx  FileGrid.tsx  FullscreenViewer.tsx  GlassPanel.tsx  HomePage.tsx  ImportProgress.tsx  IntegrityPanel.tsx  LegalScreen.tsx  LoginScreen.tsx  MoveFilesModal.tsx  Notification.tsx  PageCategories.tsx  PhoneAccessCard.tsx  PreviewPanel.tsx  SettingsPanel.tsx  StatusBar.tsx  Toolbar.tsx  TrashPanel.tsx  UpdateNotification.tsx  VaultBrowserBar.tsx  WelcomeScreen.tsx
src/effects/: BioBackground.tsx  BioOrganicFX.tsx  BioParticles.tsx  CommandGrid.tsx  CursorTrail.tsx  DataStream.tsx  EmpRipple.tsx  GridBackground.tsx  KawaiiBackground.tsx  KawaiiClickBurst.tsx  NeonBackground.tsx  NeonCityGrid.tsx  NeonFX.tsx  NeonParticles.tsx  NeonRain.tsx  NeonStreaks.tsx  NeuralWeb.tsx  Particles.tsx  PrismaticBackground.tsx  RadarSweep.tsx  Scanlines.tsx  SolarCoreBackground.tsx  SolarFlare.tsx  Starfield.tsx  TacticalHUD.tsx  UnlockBurst.tsx
src/hooks/: useLicense.ts  useSessionCache.ts  (+5 more)
(+7 files in other folders)
