[package]
name = "cybervault"
version = "0.1.0"
description = "Kawaii Vault - Encrypted File Vault"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
sha2 = "0.10"
hex = "0.4"
aes = "0.8"
cbc = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
libc = "0.2"
arboard = "3"
base64 = "0.22"
zeroize = "1"
http-range = "0.1"
percent-encoding = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
zip = { version = "2", default-features = false, features = ["deflate", "aes-crypto"] }
crc32fast = "1"
obfstr = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
httparse = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
